--- a/game1/index.html
+++ b/game1/index.html
@@ -1,11 +1,12 @@
 <html>
   <head>
-    <style>
+    <link rel="stylesheet" href="styles.css" />
+    <!-- <style>
       canvas {
         border: 2px solid =black;
         background: rgb(27, 145, 153);
       }
-    </style>
+    </style> -->
   </head>
   <body>
     <canvas id="myCanvas" width="640" height="480"></canvas>
