--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 
-<a href=game1/index.html>Day 1</a>
+<a href=lesson01/index.html>Lesson 01 - Happy Halloween</a><br>
+
+<a href=lesson02/index.html>Lesson 02 - Bouncing Balls</a>
+
 
 </html>
