--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 
-<a href=lesson01/index.html>Lesson 01 - Happy Halloween</a><br>
-
+<a href=lesson01/index.html>Lesson 01 - Happy Halloween</a>
+<br>
 <a href=lesson02/index.html>Lesson 02 - Bouncing Balls</a>
-
+<br>
+<a href=lesson03/index.html>Lesson 03 - Hungry Balls</a>
+<br>
 
 </html>
