--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <br>
 <a href=lesson03/index.html>Lesson 03 - Hungry Balls</a>
 <br>
-
+<a href=lesson04/index.html>Lesson 04 - Ping-Pang</a>
+<br>
 </html>
