--- a/lesson02/index.html
+++ b/lesson02/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <canvas id="myCanvas" width="640" height="480"></canvas>
+    <script src="../common/ball.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
