--- a/lesson03/index.html
+++ b/lesson03/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <canvas id="myCanvas" width="640" height="480"></canvas>
-    <script src="./main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
