--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <a href=lesson01/index.html>Lesson 01 - Happy Halloween</a>
 <br>
-<a href=lesson02/index.html>Lesson 02 - Bouncing Balls</a>
+<a href=lesson02/index.html>Lesson 02 - rainbow of colors</a>
 <br>
 <a href=lesson03/index.html>Lesson 03 - Hungry Balls</a>
 <br>
