--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <br>
 <a href=https://studio.code.org/projects/minecraft_designer/qSUZG1XyyS_qDf-Ad2doXbEdhof9JGd2vyBPI1v7rBo>This is war!!</a>
 <br>
-  
+<a href=https://studio.code.org/projects/dance/uwaJgYuXQR9TgO0UATjNTHK9xzSlrR5s2JM_atEaLdA>Spotlight dance</a>
+<br>  
 </html>
