--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <html>
-
+<img src="images/happyhalloween.png" width="320px" height="240px" alt="Happy Halloween">
+<br>
 <a href=lesson01/index.html>Lesson 01 - Happy Halloween</a>
+<br>
+<img src="images/bouncingballs.png" width="320px" height="240px" alt="bouncingballs">
 <br>
 <a href=lesson02/index.html>Lesson 02 - Bouncing Balls</a>
 <br>
+<img src="images/hungryballs.png" width="320px" height="240px" alt="hungryballs">
+<br>
 <a href=lesson03/index.html>Lesson 03 - Hungry Balls</a>
 <br>
-<a href=lesson04/index.html>Lesson 04 - Ping-Pang</a>
+<img src="images/automaticdraw.png" width="320px" height="240px" alt="automaticdraw">
+<br>
+<a href=lesson04/index.html>Lesson 04 - Atomatic Draw</a>
+<br>
+<img src="images/thisiswar.png" width="320px" height="240px" alt="thisiswar">
 <br>
 <a href=https://studio.code.org/projects/minecraft_designer/qSUZG1XyyS_qDf-Ad2doXbEdhof9JGd2vyBPI1v7rBo>This is war!!</a>
 <br>
+<img src="images/twisted(dancing).png" width="320px" height="240px" alt="twisted">
+<br>
 <a href=https://studio.code.org/projects/dance/qfAprkVpTmVVuYJFtH-kFcqi8mE1SslSQXoDO-LqxmU>Twisted</a>
 <br>  
+<img src="images/buttonchaser.png" width="320px" height="240px" alt="buttonchaser">
+<br>
+<a href=https://buttonchaser.learnprogramming.ca/>Button Chaser</a>
+<br> 
 </html>
